--- a/libs/client-web/account/feature/information/src/lib/components/new-password-form/new-password-form.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/new-password-form/new-password-form.component.html
@@ -2,123 +2,98 @@
   class="flex flex-col gap-2 bg-content-background p-4 rounded-base"
   (ngSubmit)="updatePassword()"
 >
-  <lib-form-field label="New password" [isRequired]="true">
+  <lib-form-field>
     @let newPassword = form.controls.newPassword;
+    <lib-label idFor="new-password">New password *</lib-label>
     <p-password
-      slot="input"
+      id="new-password"
       [fluid]="true"
       [formControl]="form.controls.newPassword"
       [toggleMask]="true"
       [feedback]="false"
     />
     @if (newPassword.dirty) {
-      <ng-container>
+      <ng-container slot="errors">
         @let minLengthError =
           newPassword.getError('minlength') || newPassword.getError('required');
-        <span
-          [ngClass]="{
-            'text-red-300': minLengthError,
-            'text-green-300': !minLengthError,
-          }"
+        <p-message
+          libErrorMessage
+          [severity]="minLengthError ? 'error' : 'success'"
+          [icon]="minLengthError ? 'pi pi-times-circle' : 'pi pi-check-square'"
         >
-          @if (minLengthError) {
-            <span class="pi pi-times-circle"></span>
-          } @else {
-            <span class="pi pi-check-square"></span>
-          }
           At least 8 characters
-        </span>
+        </p-message>
 
         @let uppercaseError =
           newPassword.getError('uppercase') || newPassword.getError('required');
-        <span
-          [ngClass]="{
-            'text-red-300': uppercaseError,
-            'text-green-300': !uppercaseError,
-          }"
+        <p-message
+          libErrorMessage
+          [severity]="uppercaseError ? 'error' : 'success'"
+          [icon]="uppercaseError ? 'pi pi-times-circle' : 'pi pi-check-square'"
         >
-          @if (uppercaseError) {
-            <span class="pi pi-times-circle"></span>
-          } @else {
-            <span class="pi pi-check-square"></span>
-          }
           At least 1 uppercase character
-        </span>
+        </p-message>
 
         @let lowercaseError =
           newPassword.getError('lowercase') || newPassword.getError('required');
-        <span
-          [ngClass]="{
-            'text-red-300': lowercaseError,
-            'text-green-300': !lowercaseError,
-          }"
+        <p-message
+          libErrorMessage
+          [severity]="lowercaseError ? 'error' : 'success'"
+          [icon]="lowercaseError ? 'pi pi-times-circle' : 'pi pi-check-square'"
         >
-          @if (lowercaseError) {
-            <span class="pi pi-times-circle"></span>
-          } @else {
-            <span class="pi pi-check-square"></span>
-          }
           At least 1 lowercase character
-        </span>
+        </p-message>
 
         @let numericError =
           newPassword.getError('numeric') || newPassword.getError('required');
-        <span
-          [ngClass]="{
-            'text-red-300': numericError,
-            'text-green-300': !numericError,
-          }"
+        <p-message
+          libErrorMessage
+          [severity]="numericError ? 'error' : 'success'"
+          [icon]="numericError ? 'pi pi-times-circle' : 'pi pi-check-square'"
         >
-          @if (numericError) {
-            <span class="pi pi-times-circle"></span>
-          } @else {
-            <span class="pi pi-check-square"></span>
-          }
           At least 1 numeric character
-        </span>
+        </p-message>
 
         @let specialError =
           newPassword.getError('special') || newPassword.getError('required');
-        <span
-          [ngClass]="{
-            'text-red-300': specialError,
-            'text-green-300': !specialError,
-          }"
+        <p-message
+          libErrorMessage
+          [severity]="specialError ? 'error' : 'success'"
+          [icon]="specialError ? 'pi pi-times-circle' : 'pi pi-check-square'"
         >
-          @if (specialError) {
-            <span class="pi pi-times-circle"></span>
-          } @else {
-            <span class="pi pi-check-square"></span>
-          }
-          At least 1 special character
-        </span>
+          At least 1 numeric character
+        </p-message>
       </ng-container>
     }
   </lib-form-field>
-  <lib-form-field label="Repeat new password" [isRequired]="true">
+  <lib-form-field>
     @let newPasswordConfirmation = form.controls.newPasswordConfirmation;
+    <lib-label idFor="repeat-new-password">Repeat new password *</lib-label>
     <p-password
-      slot="input"
+      id="repeat-new-password"
       [fluid]="true"
       [formControl]="newPasswordConfirmation"
       [toggleMask]="true"
       [feedback]="false"
     />
 
-    @if (newPasswordConfirmation.invalid && newPasswordConfirmation.dirty) {
-      <ng-container slot="errors">
-        @if (newPasswordConfirmation.getError('required')) {
-          <lib-error-message />
-        } @else if (newPasswordConfirmation.getError('passwordMismatch')) {
-          <lib-error-message message="Passwords are different" />
-        }
-      </ng-container>
+    @if (
+      newPasswordConfirmation.getError('required') &&
+      newPasswordConfirmation.dirty
+    ) {
+      <p-message libErrorMessage>Repeat new password is required</p-message>
+    } @else if (
+      newPasswordConfirmation.getError('passwordMismatch') &&
+      newPasswordConfirmation.dirty
+    ) {
+      <p-message libErrorMessage>Passwords are different</p-message>
     }
   </lib-form-field>
-  <lib-form-field label="Old password" [isRequired]="true">
+  <lib-form-field>
     @let oldPassword = form.controls.oldPassword;
+    <lib-label idFor="old-password">Old password</lib-label>
     <p-password
-      slot="input"
+      id="old-password"
       [fluid]="true"
       [formControl]="oldPassword"
       [toggleMask]="true"
@@ -126,7 +101,7 @@
     />
 
     @if (oldPassword.invalid && oldPassword.dirty) {
-      <lib-error-message />
+      <p-message libErrorMessage>Old password is required</p-message>
     }
   </lib-form-field>
   <div class="grid grid-cols-2 gap-4 mt-4">
