--- a/libs/client-web/account/feature/information/src/lib/components/address-form/address-form.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/address-form/address-form.component.html
@@ -4,71 +4,60 @@
   class="flex flex-col gap-2 bg-content-background p-4 rounded-base w-full @container"
 >
   <div class="flex flex-col gap-4 @3xl:flex-row">
-    <lib-form-field label="First name" [isRequired]="true">
+    <lib-form-field>
+      <lib-label idFor="firstname">First name</lib-label>
       <input
         pInputText
-        slot="input"
         class="w-full"
         id="firstname"
         formControlName="firstName"
       />
       @if (form.controls.firstName.invalid && form.controls.firstName.dirty) {
-        <lib-error-message />
+        <p-message libErrorMessage>First name is required</p-message>
       }
     </lib-form-field>
-    <lib-form-field label="Last name" [isRequired]="true">
+    <lib-form-field>
+      <lib-label idFor="lastname">Last name</lib-label>
       <input
-        slot="input"
-        class="w-full"
         pInputText
+        class="w-full"
         id="lastname"
         formControlName="lastName"
       />
       @if (form.controls.lastName.invalid && form.controls.lastName.dirty) {
-        <lib-error-message />
+        <p-message libErrorMessage>Last name is required</p-message>
       }
     </lib-form-field>
   </div>
   <div class="flex flex-wrap gap-4 w-full @lg:grid @lg:grid-cols-[1fr_1fr]">
-    <lib-form-field label="Street" [isRequired]="true">
-      <input slot="input" pInputText id="street" formControlName="street" />
+    <lib-form-field>
+      <lib-label idFor="street">Street</lib-label>
+      <input pInputText id="street" formControlName="street" />
       @if (form.controls.street.invalid && form.controls.street.dirty) {
-        <lib-error-message />
+        <p-message libErrorMessage>Street is required</p-message>
       }
     </lib-form-field>
     <div class="grid grid-cols-2 gap-4">
-      <lib-form-field label="Home number" [isRequired]="true">
-        <input
-          slot="input"
-          pInputText
-          id="home-number"
-          formControlName="homeNumber"
-        />
+      <lib-form-field>
+        <lib-label idFor="home-number">Home number</lib-label>
+        <input pInputText id="home-number" formControlName="homeNumber" />
         @if (
           form.controls.homeNumber.invalid && form.controls.homeNumber.dirty
         ) {
-          <lib-error-message />
+          <p-message libErrorMessage>Home number is required</p-message>
         }
       </lib-form-field>
-      <lib-form-field label="House number">
-        <input
-          slot="input"
-          pInputText
-          id="house-number"
-          formControlName="houseNumber"
-        />
-        @if (
-          form.controls.houseNumber.invalid && form.controls.houseNumber.dirty
-        ) {
-          <lib-error-message />
-        }
+      <lib-form-field>
+        <lib-label idFor="house-number">House number</lib-label>
+        <input pInputText id="house-number" formControlName="houseNumber" />
       </lib-form-field>
     </div>
   </div>
-  <lib-form-field label="Country" [isRequired]="true" class="max-w-64">
+  <lib-form-field class="max-w-64">
+    <lib-label idFor="country">Country</lib-label>
     <p-autocomplete
-      slot="input"
       styleClass="w-full"
+      id="country"
       formControlName="country"
       [suggestions]="countries()"
       (completeMethod)="filterCountries($event)"
@@ -77,52 +66,38 @@
       [showClear]="true"
     />
     @if (form.controls.country.invalid && form.controls.country.dirty) {
-      <lib-error-message />
+      <p-message libErrorMessage>Country is required</p-message>
     }
   </lib-form-field>
   <div class="grid grid-cols-1 gap-4 @md:grid-cols-[9rem_1fr]">
-    <lib-form-field
-      label="Post code"
-      [isRequired]="true"
-      [isLoading]="loading()"
-      labelSkeletonWidth="7rem"
-      inputSkeletonWidth="14rem"
-    >
-      <input slot="input" pInputText id="postcode" formControlName="postcode" />
+    <lib-form-field>
+      <lib-label idFor="postcode">Postcode</lib-label>
+      <input pInputText id="postcode" formControlName="postcode" />
       @if (form.controls.postcode.invalid && form.controls.postcode.dirty) {
-        <lib-error-message />
+        <p-message libErrorMessage>Postcode is required</p-message>
       }
     </lib-form-field>
-    <lib-form-field
-      label="City"
-      [isRequired]="true"
-      [isLoading]="loading()"
-      labelSkeletonWidth="5rem"
-    >
-      <input slot="input" pInputText id="city" formControlName="city" />
+    <lib-form-field>
+      <lib-label idFor="city">City</lib-label>
+      <input pInputText id="city" formControlName="city" />
       @if (form.controls.city.invalid && form.controls.city.dirty) {
-        <lib-error-message />
+        <p-message libErrorMessage>City is required</p-message>
       }
     </lib-form-field>
   </div>
-  <lib-form-field
-    label="Phone"
-    [isRequired]="true"
-    [isLoading]="loading()"
-    labelSkeletonWidth="8rem"
-    inputSkeletonWidth="20rem"
-  >
-    <input
-      slot="input"
-      pInputText
-      id="phone"
-      class="w-20rem"
-      formControlName="phone"
-    />
+  <lib-form-field>
+    <lib-label idFor="phone">Phone</lib-label>
+    <input pInputText id="phone" class="w-20rem" formControlName="phone" />
     @if (form.controls.phone.invalid && form.controls.phone.dirty) {
-      <lib-error-message />
+      <p-message libErrorMessage>Phone is required</p-message>
     }
   </lib-form-field>
+
+  @if (!isFormChanged() && form.dirty) {
+    <p-message libErrorMessage class="mt-2">
+      You don't changed any value
+    </p-message>
+  }
 
   <div class="grid grid-cols-2 gap-4 mt-4">
     <p-button
