--- a/libs/client-web/auth/feature/login/src/lib/login/login.component.html
+++ b/libs/client-web/auth/feature/login/src/lib/login/login.component.html
@@ -9,28 +9,26 @@
     class="flex flex-col gap-2 w-full xl:items-center"
     (ngSubmit)="submit()"
   >
-    <lib-form-field label="Email" [isRequired]="true">
-      @let emailControl = loginForm.controls.email;
+    @let emailControl = loginForm.controls.email;
+    <lib-form-field>
+      <lib-label idFor="email">Email *</lib-label>
       <input
-        slot="input"
         autofocus
         pInputText
         id="email"
         autocomplete="off"
         formControlName="email"
       />
-      @if (emailControl.dirty && emailControl.invalid) {
-        <ng-container>
-          @if (emailControl.getError('required')) {
-            <lib-error-message />
-          } @else if (emailControl.getError('email')) {
-            <lib-error-message message="Email is invalid" />
-          }
-        </ng-container>
+      @if (emailControl.getError('required') && emailControl.dirty) {
+        <p-message libErrorMessage>Email is required</p-message>
+      }
+      @if (emailControl.getError('email') && emailControl.dirty) {
+        <p-message libErrorMessage>Email is invalid</p-message>
       }
     </lib-form-field>
-    <lib-form-field label="Password" [isRequired]="true">
+    <lib-form-field>
       @let passwordControl = loginForm.controls.password;
+      <lib-label idFor="password">Password *</lib-label>
       <p-password
         slot="input"
         id="password"
@@ -40,17 +38,14 @@
         [toggleMask]="true"
         formControlName="password"
       />
-      @if (passwordControl.dirty) {
-        <ng-container>
-          @if (passwordControl.getError('minlength')) {
-            <lib-error-message
-              message="Password should have at least 6 characters"
-            />
-          }
-          @if (passwordControl.getError('required')) {
-            <lib-error-message />
-          }
-        </ng-container>
+      @if (passwordControl.getError('required') && passwordControl.dirty) {
+        <p-message libErrorMessage> Password is required </p-message>
+      } @else if (
+        passwordControl.getError('minlength') && passwordControl.dirty
+      ) {
+        <p-message libErrorMessage>
+          Password should have at least 6 characters
+        </p-message>
       }
     </lib-form-field>
 
