--- a/libs/client-web/shared/ui/src/lib/form-field/form-field.component.html
+++ b/libs/client-web/shared/ui/src/lib/form-field/form-field.component.html
@@ -1,16 +1,7 @@
-@if (isLoading()) {
-  <div class="flex flex-col gap-2">
-    <p-skeleton [width]="labelSkeletonWidth()" height="1rem" />
-    <p-skeleton [width]="inputSkeletonWidth()" height="2.2rem" />
+<div class="flex flex-col w-full">
+  <ng-content select="lib-label" />
+  <ng-content />
+  <div class="mt-1 flex flex-col">
+    <ng-content select="p-message[libErrorMessage], [slot='errors']" />
   </div>
-} @else {
-  <div class="flex flex-col w-full">
-    <label class="flex flex-col gap-1">
-      <span>{{ label() }} {{ isRequired() ? '*' : '' }}</span>
-      <ng-content select="[slot='input']" />
-    </label>
-    <div class="mt-1 flex flex-col">
-      <ng-content />
-    </div>
-  </div>
-}
+</div>
