--- a/libs/client-web/account/feature/information/src/lib/components/addresses/addresses.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/addresses/addresses.component.html
@@ -58,7 +58,9 @@
   [dismissableMask]="true"
   (visibleChange)="hideForm()"
 >
-  <lib-address-form class="w-full" />
+  @if (isFormVisibleDelayedToResetForm()) {
+    <lib-account-data-address-form class="w-full" />
+  }
 </p-dialog>
 
 <lib-delete-address-confirmation-dialog
