--- a/libs/client-web/shared/ui/src/lib/label/label.component.html
+++ b/libs/client-web/shared/ui/src/lib/label/label.component.html
@@ -1,5 +1,5 @@
 <label
-  class="flex flex-col text-sm gap-1 text-surface-600"
+  class="flex flex-col text-sm gap-1 text-muted-color"
   [ngClass]="{ 'text-red-600': invalid() }"
   [for]="idFor()"
 >
