--- a/libs/client-web/cart/feature/order-process/src/lib/components/delivery-address/user-address-form/user-address-form.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/delivery-address/user-address-form/user-address-form.component.html
@@ -1,134 +1,7 @@
-<form
-  [formGroup]="form"
-  (ngSubmit)="submit()"
-  class="flex flex-col gap-2 @container"
->
-  <div class="flex flex-col gap-4 @3xl:flex-row">
-    <lib-form-field>
-      <lib-label idFor="firstname">First name</lib-label>
-      <input
-        pInputText
-        slot="input"
-        class="w-full"
-        id="firstname"
-        formControlName="firstName"
-      />
-      @if (form.controls.firstName.invalid && form.controls.firstName.dirty) {
-        <p-message libErrorMessage>First name is required</p-message>
-      }
-    </lib-form-field>
-    <lib-form-field>
-      <lib-label idFor="lastname">Last name</lib-label>
-      <input
-        slot="input"
-        class="w-full"
-        pInputText
-        id="lastname"
-        formControlName="lastName"
-      />
-      @if (form.controls.lastName.invalid && form.controls.lastName.dirty) {
-        <p-message libErrorMessage>Last name is required</p-message>
-      }
-    </lib-form-field>
-  </div>
-  <div class="flex flex-wrap gap-4 w-full @lg:grid @lg:grid-cols-[1fr_1fr]">
-    <lib-form-field>
-      <lib-label idFor="street">Street</lib-label>
-      <input slot="input" pInputText id="street" formControlName="street" />
-      @if (form.controls.street.invalid && form.controls.street.dirty) {
-        <p-message libErrorMessage>Street is required</p-message>
-      }
-    </lib-form-field>
-    <div class="grid grid-cols-2 gap-4">
-      <lib-form-field>
-        <lib-label idFor="home-number">Home number</lib-label>
-        <input
-          pInputText
-          slot="input"
-          id="home-number"
-          formControlName="homeNumber"
-        />
-        @if (
-          form.controls.homeNumber.invalid && form.controls.homeNumber.dirty
-        ) {
-          <p-message libErrorMessage>Home number is required</p-message>
-        }
-      </lib-form-field>
-      <lib-form-field label="House number">
-        <lib-label idFor="house-number">Home number</lib-label>
-        <input
-          slot="input"
-          pInputText
-          id="house-number"
-          formControlName="houseNumber"
-        />
-        @if (
-          form.controls.houseNumber.invalid && form.controls.houseNumber.dirty
-        ) {
-          <p-message libErrorMessage>House number is required</p-message>
-        }
-      </lib-form-field>
-    </div>
-  </div>
-  <lib-form-field class="max-w-64">
-    <lib-label idFor="country">Country</lib-label>
-    <p-autocomplete
-      slot="input"
-      styleClass="w-full"
-      formControlName="country"
-      [suggestions]="countries()"
-      (completeMethod)="filterCountries($event)"
-      [dropdown]="true"
-      optionLabel="name"
-      [showClear]="true"
-    />
-    @if (form.controls.country.invalid && form.controls.country.dirty) {
-      <p-message libErrorMessage>Country is required</p-message>
-    }
-  </lib-form-field>
-  <div class="grid grid-cols-1 gap-4 @md:grid-cols-[9rem_1fr]">
-    <lib-form-field>
-      <lib-label idFor="postcode">Postcode</lib-label>
-      <input slot="input" pInputText id="postcode" formControlName="postcode" />
-      @if (form.controls.postcode.invalid && form.controls.postcode.dirty) {
-        <p-message libErrorMessage>Postcode is required</p-message>
-      }
-    </lib-form-field>
-    <lib-form-field>
-      <lib-label idFor="city">City</lib-label>
-      <input slot="input" pInputText id="city" formControlName="city" />
-      @if (form.controls.city.invalid && form.controls.city.dirty) {
-        <p-message libErrorMessage>City is required</p-message>
-      }
-    </lib-form-field>
-  </div>
-  <lib-form-field>
-    <lib-label idFor="phone">Phone</lib-label>
-    <input pInputText id="phone" class="w-20rem" formControlName="phone" />
-    @if (form.controls.phone.invalid && form.controls.phone.dirty) {
-      <p-message libErrorMessage>Phone is required</p-message>
-    }
-  </lib-form-field>
-  @if (!isFormChanged() && form.dirty) {
-    <p-message libErrorMessage class="mt-2">
-      You don't changed any value
-    </p-message>
-  }
-
-  <div class="grid grid-cols-2 gap-4 mt-4">
-    <p-button
-      [outlined]="true"
-      label="Cancel"
-      (onClick)="hideForm()"
-      styleClass="w-full"
-    />
-
-    <p-button
-      severity="secondary"
-      [loading]="loading()"
-      label="Save"
-      type="submit"
-      styleClass="w-full"
-    />
-  </div>
-</form>
+<lib-address-form
+  [loading]="loading()"
+  [initialAddress]="updatingAddress() ?? undefined"
+  (onAdd)="add($event)"
+  (onEdit)="edit($event)"
+  (onCancel)="cancel()"
+/>
