Minor improvements to ui/ux

--- a/libs/client-web/browse/feature/books/src/lib/components/filters/filters.component.html
+++ b/libs/client-web/browse/feature/books/src/lib/components/filters/filters.component.html
@@ -16,7 +16,9 @@
 />
 
 <p-drawer libDrawerLeft class="xl:hidden" [(visible)]="sidebarVisible">
-  <ng-container [ngTemplateOutlet]="filters" />
+  @if (sidebarVisible()) {
+    <ng-container [ngTemplateOutlet]="filters" />
+  }
 </p-drawer>
 
 <ng-template #filters>
