--- a/libs/client-web/browse/ui/src/lib/active-filters/active-filters.component.html
+++ b/libs/client-web/browse/ui/src/lib/active-filters/active-filters.component.html
@@ -3,7 +3,7 @@
     size="small"
     styleClass="min-w-max h-10"
     label="Clear filters"
-    severity="primary"
+    severity="contrast"
     (click)="clearFilters()"
   />
   @for (activeFilter of activeFilters(); track activeFilter.id) {
