--- a/libs/client-web/auth/feature/shell/src/lib/auth-shell.component.html
+++ b/libs/client-web/auth/feature/shell/src/lib/auth-shell.component.html
@@ -3,11 +3,12 @@
     <router-outlet />
   </div>
   <div
-    class="rounded-base overflow-hidden flex w-full h-full xl:content-end xl:h-content"
+    class="relative rounded-base overflow-hidden flex w-full h-full xl:content-end xl:h-content"
   >
     <img
+      ngSrc="assets/auth-books.webp"
+      fill
       class="object-fill object-center w-full"
-      src="assets/auth-books.jpg"
       alt="book store"
     />
   </div>
